Added White Snapper

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                 <div class="div__fish--info">
                     <h3 class="h3__fishName">Fish Name</h3>
                     <ul class="ul__fishInfo">
-                        <li>Cod</li>
-                        <li>24'</li>
-                        <li>Paper</li>
-                        <li>Caught in <a class="anchor__fishPlace">Place</a></li>
+                        <li>White Snapper</li>
+                        <li>14'</li>
+                        <li>Tuna</li>
+                        <li>Caught in Bluegrass Pond<a class="anchor__fishPlace">Place</a></li>
                     </ul>
                 </div>
                 <img class="img__fish" src="https://www.generatormix.com/images/thumbs/random-fish.jpg" alt="fish">
