Added database for fish

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <link href="styles/style.css" type="text/css" rel="stylesheet">
-    <script src="scripts/script.js"></script>
 </head>
 
 <body>
@@ -25,7 +24,8 @@
             </div>
             <div class="div__fish--childContainer">
                 <aside class="aside__fish--quotes">
-                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them every day at noon, and must NEVER use salt water.</p>
+                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them
+                        every day at noon, and must NEVER use salt water.</p>
                 </aside>
             </div>
         </div>
@@ -45,7 +45,8 @@
             </div>
             <div class="div__fish--childContainer">
                 <aside class="aside__fish--quotes">
-                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them every day at noon, and must NEVER use salt water.</p>
+                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them
+                        every day at noon, and must NEVER use salt water.</p>
                 </aside>
             </div>
         </div>
@@ -65,7 +66,8 @@
             </div>
             <div class="div__fish--childContainer">
                 <aside class="aside__fish--quotes">
-                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them every day at noon, and must NEVER use salt water.</p>
+                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them
+                        every day at noon, and must NEVER use salt water.</p>
                 </aside>
             </div>
         </div>
@@ -85,7 +87,8 @@
             </div>
             <div class="div__fish--childContainer">
                 <aside class="aside__fish--quotes">
-                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them every day at noon, and must NEVER use salt water.</p>
+                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them
+                        every day at noon, and must NEVER use salt water.</p>
                 </aside>
             </div>
         </div>
@@ -105,7 +108,8 @@
             </div>
             <div class="div__fish--childContainer">
                 <aside class="aside__fish--quotes">
-                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them every day at noon, and must NEVER use salt water.</p>
+                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them
+                        every day at noon, and must NEVER use salt water.</p>
                 </aside>
             </div>
         </div>
@@ -125,7 +129,8 @@
             </div>
             <div class="div__fish--childContainer">
                 <aside class="aside__fish--quotes">
-                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them every day at noon, and must NEVER use salt water.</p>
+                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them
+                        every day at noon, and must NEVER use salt water.</p>
                 </aside>
             </div>
         </div>
@@ -145,7 +150,8 @@
             </div>
             <div class="div__fish--childContainer">
                 <aside class="aside__fish--quotes">
-                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them every day at noon, and must NEVER use salt water.</p>
+                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them
+                        every day at noon, and must NEVER use salt water.</p>
                 </aside>
             </div>
         </div>
@@ -165,7 +171,8 @@
             </div>
             <div class="div__fish--childContainer">
                 <aside class="aside__fish--quotes">
-                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them every day at noon, and must NEVER use salt water.</p>
+                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them
+                        every day at noon, and must NEVER use salt water.</p>
                 </aside>
             </div>
         </div>
@@ -185,7 +192,8 @@
             </div>
             <div class="div__fish--childContainer">
                 <aside class="aside__fish--quotes">
-                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them every day at noon, and must NEVER use salt water.</p>
+                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them
+                        every day at noon, and must NEVER use salt water.</p>
                 </aside>
             </div>
         </div>
@@ -205,7 +213,8 @@
             </div>
             <div class="div__fish--childContainer">
                 <aside class="aside__fish--quotes">
-                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them every day at noon, and must NEVER use salt water.</p>
+                    <p>To maintain this fish, I keep the tank at a temperature of 30 degrees Fahrenheit. I feed them
+                        every day at noon, and must NEVER use salt water.</p>
                 </aside>
             </div>
         </div>
@@ -234,7 +243,9 @@
     <section class="section__locations">
         <div class="div__location">
             <div class="div__location--child--img">
-                <img class="img__location--size" src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg" alt="Picture of Location">
+                <img class="img__location--size"
+                    src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg"
+                    alt="Picture of Location">
             </div>
             <div class="div__location--child">
                 <h4>Battlecreek Pond</h4>
@@ -247,7 +258,9 @@
         </div>
         <div class="div__location">
             <div class="div__location--child--img">
-                <img class="img__location--size" src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg" alt="Picture of Location">
+                <img class="img__location--size"
+                    src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg"
+                    alt="Picture of Location">
             </div>
             <div class="div__location--child">
                 <h4>Battlecreek Pond</h4>
@@ -260,7 +273,9 @@
         </div>
         <div class="div__location">
             <div class="div__location--child--img">
-                <img class="img__location--size" src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg" alt="Picture of Location">
+                <img class="img__location--size"
+                    src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg"
+                    alt="Picture of Location">
             </div>
             <div class="div__location--child">
                 <h4>Battlecreek Pond</h4>
@@ -273,7 +288,9 @@
         </div>
         <div class="div__location">
             <div class="div__location--child--img">
-                <img class="img__location--size" src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg" alt="Picture of Location">
+                <img class="img__location--size"
+                    src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg"
+                    alt="Picture of Location">
             </div>
             <div class="div__location--child">
                 <h4>Battlecreek Pond</h4>
@@ -286,7 +303,9 @@
         </div>
         <div class="div__location">
             <div class="div__location--child--img">
-                <img class="img__location--size" src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg" alt="Picture of Location">
+                <img class="img__location--size"
+                    src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg"
+                    alt="Picture of Location">
             </div>
             <div class="div__location--child">
                 <h4>Battlecreek Pond</h4>
@@ -299,7 +318,9 @@
         </div>
         <div class="div__location">
             <div class="div__location--child--img">
-                <img class="img__location--size" src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg" alt="Picture of Location">
+                <img class="img__location--size"
+                    src="http://cdn.photos.sparkplatform.com/met/20191028134336756475000000-o.jpg"
+                    alt="Picture of Location">
             </div>
             <div class="div__location--child">
                 <h4>Battlecreek Pond</h4>
@@ -311,6 +332,7 @@
             </div>
         </div>
     </section>
+    <script type="module" src="scripts/main.js"></script>
 </body>
 
 </html>
